@@ -11,27 +11,49 @@ require_once 'Hamcrest/Core/SubstringMatcher.php';
  */
 class Hamcrest_Core_StringContains extends Hamcrest_Core_SubstringMatcher
 {
+
+  private $_ignoreCase;
   
-  public function __construct($substring)
+  public function __construct($substring, $ignoreCase=false)
   {
     parent::__construct($substring);
+
+    $this->_ignoreCase = $ignoreCase;
+  }
+
+  public function ignoringCase()
+  {
+    $this->_ignoreCase = true;
+    return $this;
   }
   
   public static function containsString($substring)
   {
-    return new self($substring);
+    return new self($substring, false);
+  }
+
+  public static function containsStringIgnoringCase($substring)
+  {
+    return new self($substring, true);
   }
   
   // -- Protected Methods
   
   protected function evalSubstringOf($item)
   {
-    return (false !== strpos((string) $item, $this->_substring));
+    if ($this->_ignoreCase)
+    {
+      return (false !== stripos((string) $item, $this->_substring));
+    }
+    else
+    {
+      return (false !== strpos((string) $item, $this->_substring));
+    }
   }
   
   protected function relationship()
   {
-    return 'containing';
+    return $this->_ignoreCase ? 'containing in any case' : 'containing';
   }
   
 }
